Bug 501045 - "Clicking Growl New Mail Notification Results in "imap-message is not a registered protocol" error" [r=Standard8,sr=bienvenu] with fix for SM by Standard8 [r+sr=Neil]